<resources>
    <string name="app_name">Trip Remainder</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="UpComingTrip">UpComingTrip</string>
    <string name="UserName">UserName</string>
    <string name="UserEmail">UserEmail</string>
    <string name="History">History</string>
    <string name="Map">Map</string>
    <string name="Sync">Sync</string>
    <string name="Logout">Logout</string>
    <string name="TripTime">Trip Time</string>
    <string name="TripDate">Trip Date</string>
    <string name="TripName">Trip Name</string>
    <string name="StartPoint">Start Point</string>
    <string name="EndPoint">End Point</string>
    <string name="AddNote">Add Note</string>
    <string name="Start">Start</string>
    <string name="Status">Status</string>
    <string name="ViewNotes">View Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Communication">Communication</string>
    <string name="General">General</string>
    <string name="title_activity_sign_up">Sign_upActivity</string>
    <string name="remove_bubble_description">Remove Floating Bubble</string>
    <string name="floating_bubble_description">Floating Bubble</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="E_Mail">E_Mail</string>
    <string name="password">password</string>
    <string name="email">E_Mail</string>
    <string name="login">login</string>
    <string name="create_a_new_account">create a new account</string>
    <string name="image">image</string>
    <string name="failed">Faild</string>
    <string name="title_activity_sign_in">sign_in_Activity</string>
    <string name="register">Register</string>

    <string name="tripNameLabelText">Trip Name</string>
    <string name="StartPlaceText">Start Location</string>
    <string name="EndLocationText">End Location</string>
    <string name="Date" />
    <string name="addBtnText">Add Trip</string>
    <string name="saveBtnText">Save</string>
    <string name="Close">Close</string>
    <string name="Notes">Notes</string>
    <string name="EnterNote">Enter Note</string>
    <string name="Add">Add</string>
    <string name="Save">Save</string>

    <string-array name="tripsTypesArray">
        <item>One way</item>
        <item>Round trip</item>
    </string-array>


</resources>