<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/General"
        >
        <menu>
            <item
                android:id="@+id/home"
                android:icon="@drawable/ic_home"
                android:title="@string/UpComingTrip" />
            <item
                android:id="@+id/history"
                android:icon="@drawable/ic_history"
                android:title="@string/History" />
            <item
                android:id="@+id/map"
                android:icon="@drawable/maap"
                android:title="@string/Map" />
        </menu>
    </item>
    <item android:title="@string/Communication">
        <menu>
            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/sync"
                    android:icon="@drawable/ic_sync"
                    android:title="@string/Sync" />
                <item
                    android:id="@+id/logout"
                    android:icon="@drawable/ic_logout"
                    android:title="@string/Logout" />
            </group>
        </menu>
    </item>
</menu>