<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".notes.AddNote">
    <include
        android:id="@+id/drawer_toolbar"
        layout="@layout/drawer_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:id="@+id/recycler"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/drawer_toolbar"        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:id="@+id/edit_text"
        android:hint="@string/EnterNote"
        android:textAlignment="center"
        android:padding="12dp"
        app:layout_constraintTop_toBottomOf="@id/recycler"
        android:background="@android:drawable/editbox_background"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/edit_text"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/bt_add"
            android:text="@string/Add"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/bt_save"
            android:text="@string/Save"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>